fix double scrollbar caused by overflow hidden

--- a/app/globals.css
+++ b/app/globals.css
@@ -11,10 +11,6 @@
   --typewriterSpeed: 4s;
 }
 
-html, body {
-  overflow-x: hidden;
-}
-
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
